Fix side-by-side alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@ html {
   line-height: 1.5;
   margin: 0;
   padding: 3em 1em 1em;
-  text-align: center;
   box-sizing: border-box;
 }
 
@@ -13,24 +12,27 @@ html {
   box-sizing: inherit;
 }
 
-.container {
+.parent {
   display: inline-block;
   margin: 0;
+  width: 100%;
 }
 
-.section1 {
+.child {
   display: inline;
-  max-width: 400px;
+  float: left;
+  width: 400px;
 }
 
 img {
-  display: block;
+  display: inline-block;
   width: 100%;
   max-width: 25em;
+  padding: 0em 5em .75em 0em;
   vertical-align: middle;
 }
 
-section div {
+.text .child {
   width: 100%;
   max-width: 25em;
   display: inline-block;
@@ -40,8 +42,8 @@ section div {
 
 section h2 {
   display: inline-block;
-  padding: .7em 0;
   text-align: left;
+  margin-top: 0;
 }
 
 div p {
